--- a/Hjemmeside.html
+++ b/Hjemmeside.html
@@ -60,7 +60,7 @@
 		<article>
 			<h3>Featured Content</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod leo a nibh dignissim tincidunt. Nam ultricies odio ac neque suscipit volutpat. Ut dictum adipiscing felis sed malesuada. Integer porta sem nec nibh hendrerit imperdiet. </p>
-			<a href="#"><img src="images/video-placeholder.jpg" alt="video placeholder" /></a>
+			<a href="#"><img src="billeder/download%20(2).jpg" alt="video placeholder" /></a>
 		</article>
 	</div>
 </div>
