--- a/Hjemmeside.html
+++ b/Hjemmeside.html
@@ -15,7 +15,7 @@
 
 <header>
 	<div class="wrapper">
-		<h1>Simply<span class="color">.</span></h1>
+		<h1>Sex Und Samfund<span class="color">.</span></h1>
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
