--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 		</head>
 		
 	<body>
+		<div class="header">
+		
 
 
+			</div>
+		<div class="footer">
 
-
-
-
-
+		
+		
+			</div>
 
 		</body>
 </html>
