--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="da">
 	<head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="keywords" content="Sex&Samfund, Sikker Sex, Kondom">
+	<title>Sex & Samfund</title>
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	
 		</head>
-		
 	<body>
-		<div class="header">
-		
-
+		<header>
+		<h1>Sex & Samfund</h1>
+			
+		<div class="nav">
 
 			</div>
-		<div class="footer">
+
+			</header>
+		<footer>
+		
 
 		
 		
-			</div>
-
+			</footer>
 		</body>
 </html>
