--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="Sex&Samfund, Sikker Sex, Kondom">
 	<title>Sex & Samfund</title>
+	<link rel="icon" href="billeder/favicon.png">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	
 		</head>
 	<body>
-		<header>
-		<h1>Sex & Samfund</h1>
-			
-		<div class="nav">
+  <div class="navigation-bar">
 
-			</div>
 
-			</header>
+    <div id="navigation-container">
+	
+      <img src="billeder/logo.png">
+		
+      <ul>
+        <li><a href="#">Nyheder</a></li>
+        <li><a href="#">Omkring Os</a></li>
+        <li><a href="#">Kontakt Os</a></li>
+      </ul>
+    </div>
+	
 		<footer>
 		
 
