--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 		</head>
 	<body>
   <div class="navigation-bar">
+	<div class="logo">
+		<img src="billeder/logo1.png" height="85px" width="85px">
+			</div>
 
 
     <div id="navigation-container">
-	
-      <img src="billeder/logo.png">
-		
       <ul>
         <li><a href="#">Nyheder</a></li>
         <li><a href="#">Omkring Os</a></li>
